--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,16 @@
 [pytest]
-python_files =
-    test_*.py
 
-addopts = --cov dynamic_conf -s
+addopts =
+    --strict
+    --pdbcls=tests:Debugger
+
+    -r sxX
+
+    --cov=xake
+    --cov-report=html
+    --cov-report=term-missing:skip-covered
+    --no-cov-on-fail
+
+cache_dir = .cache
+
+markers =
