--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,18 @@
 [tool.poetry]
+
 name = "xake"
-version = "0.1.0"
-description = "Python build tool using xonsh shell"
-authors = ["Noortheen Raja <jnoortheen@gmail.com>"]
+version = "0.0"
+description = "Make alternative using Python/Xonsh-shell"
+
 license = "MIT"
 
-readme = 'README.md'
+authors = ["Noortheen Raja <jnoortheen@gmail.com>"]
+
+readme = "README.md"
+
+documentation = "https://xake.readthedocs.io"
 repository = "https://github.com/jnoortheen/xake"
-homepage = "https://github.com/jnoortheen/xake"
+homepage = "https://pypi.org/project/xake"
 
 keywords = ['build-tool', 'make', ]
 classifiers = [
@@ -19,18 +24,53 @@ classifiers = [
     "Topic :: Utilities",
     "Topic :: Software Development :: Libraries",
     "Topic :: Software Development :: Libraries :: Python Modules",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.6",
 ]
 
 [tool.poetry.dependencies]
-python = "~2.7 || ^3.6"
+
+python = "^3.6"
+
 
 [tool.poetry.dev-dependencies]
-pytest = "^4"
-pytest-cov = "^2.8"
-tox = "^3.14"
+
+# Formatters
+black = "=19.10b0"
+isort = "=4.3.21"
+
+# Linters
+mypy = "*"
+pydocstyle = "*"
+pylint = "^2.0"
+
+# Testing
+pytest = "^5.3.2"
+pytest-cov = "*"
+pytest-describe = "*"
+pytest-expecter = "*"
+pytest-random = "*"
+freezegun = "*"
+
+# Reports
+coveragespace = "^3.1.1"
+
+# Documentation
+mkdocs = "^1.0"
+pygments = "*"
+
+# Tooling
+pyinstaller = "*"
+sniffer = "*"
+MacFSEvents = { version = "*", platform = "darwin" }
+pync = { version = "*", platform = "darwin" }
+ipython = "^7.12.0"
 
 [tool.poetry.scripts]
 xake = 'xake:main'
+
+[tool.black]
+target-version = ["py36", "py37"]
 
 [build-system]
 requires = ["poetry>=0.12"]
