--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 
 name = "xake"
-version = "0.0"
+version = "0.1"
 description = "Make alternative using Python/Xonsh-shell"
 
 license = "MIT"
@@ -32,6 +32,8 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.6"
+argh = "^0.26.2"
+docstring-parser = "^0.6"
 
 
 [tool.poetry.dev-dependencies]
@@ -66,9 +68,10 @@ sniffer = "*"
 MacFSEvents = { version = "*", platform = "darwin" }
 pync = { version = "*", platform = "darwin" }
 ipython = "^7.12.0"
+pyinotify = "^0.9.6"
 
 [tool.poetry.scripts]
-xake = 'xake:main'
+xake = 'xake.cli:main'
 
 [tool.black]
 target-version = ["py36", "py37"]
